tests/ui/const-generics/issues/issue-67739.min.stderr
error: constant expression depends on a generic parameter
  --> $DIR/issue-67739.rs:11:15
   |
LL |         [0u8; mem::size_of::<Self::Associated>()];
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to 1 previous error

